Test/error/test-def-1.cmm
int main()
{
    int a = ;
    return x;
}
